# hydrant

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  default.nix  flake.nix
.agent/rules/: read-agents.md
.beads/: .auto-import-issues.jsonl  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
docs/: README.md  build-features.md  configuration.md  getting-started.md
docs/api/: README.md  crawler.md  database.md  filter.md  firehose.md  ingestion.md  jetstream.md  pds.md  repos.md
docs/concepts/: README.md  relay.md  vs-tap.md
docs/specs/: db-layer.md
docs/xrpc/: README.md  atproto.md  backlinks.md  hydrant.md  identity.md  repo.md
examples/: statusphere.rs
scripts/: compare_relay_host_status.nu  compare_relay_repo_coverage.nu  compare_repo_statuses.nu  validate_failing_pds.nu
src/: car.rs  config.rs  control.rs  filter.rs  jetstream.rs  lib.rs  main.rs  ops.rs  patch.rs  pds_daily_limit.rs  pds_meta.rs  resolver.rs  sparse_mst.rs  state.rs  types.rs  util.rs
src/api/: crawler.rs  db.rs  debug.rs  event.rs  filter.rs  firehose.rs  index.txt  ingestion.rs  jetstream.rs  mod.rs  pds.rs  repo.rs  repos.rs  stats.rs  stream.rs  train_dict.rs  ws.rs  xrpc.rs
src/api/xrpc/: com_atproto_describe_repo.rs  count_records.rs  describe_repo.rs  get_host_status.rs  get_latest_commit.rs  get_record.rs  get_record_by_uri.rs  get_repo.rs  get_repo_status.rs  list_hosts.rs  list_records.rs  list_repos.rs  mod.rs  request_crawl.rs  resolve_mini_doc.rs  subscribe_repos.rs
src/backfill/: client.rs  error.rs  manager.rs  mod.rs  sparse.rs  worker.rs
src/backfill/worker/: process.rs  task.rs
src/backlinks/: api.rs  links.rs  mod.rs  store.rs
src/buffer/: mod.rs  processor.rs
src/config/: env.rs  types.rs
src/control/: crawler.rs  db.rs  filter.rs  firehose.rs  hosts.rs  hydrant.rs  indexer.rs  jetstream.rs  mod.rs  pds.rs  relay.rs  repos.rs  seed.rs  stats.rs  stream.rs
src/control/hydrant/: run.rs
src/control/repos/: indexer.rs  mod.rs
src/control/stream/: engine.rs  indexer.rs  jetstream.rs  relay.rs  types.rs
src/crawler/: ban.rs  by_collection.rs  list_repos.rs  mod.rs  relay.rs  throttle.rs  worker.rs
src/crawler/list_repos/: checker.rs  producer.rs  retry.rs
src/db/: compaction.rs  counts.rs  ephemeral.rs  filter.rs  gc.rs  indexer.rs  keys.rs  keyspaces.rs  lifecycle_counts.rs  mod.rs  open.rs  pds_meta.rs  pds_tiers.rs  refcount.rs  registry.rs  schema.rs  train.rs  txn.rs  types.rs
src/db/keys/: indexer.rs  mod.rs  v1.rs
src/db/migration/: mod.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs  v9.rs
src/ingest/: firehose.rs  firehose_stats.rs  indexer.rs  mailbox.rs  mod.rs  relay.rs  relay_worker.rs  stream.rs  validation.rs  worker.rs
src/ingest/firehose_stats/: kinds.rs  noop.rs  relay.rs  source.rs
src/ingest/indexer/: message.rs  shard.rs  worker.rs
src/ingest/relay/: context.rs  handlers.rs  sink.rs  worker.rs
src/ingest/relay/sink/: indexer.rs  none.rs  relay.rs
src/ingest/stream/: codec.rs  types.rs
src/ops/: backlink_ops.rs  record_events.rs
src/types/: event.rs  v2.rs  v4.rs  v7.rs
src/types/event/: jetstream.rs  relay.rs  stream.rs
src/util/: mod.rs  throttle.rs
tests/: api.nu  api_crawler_sources.nu  api_firehose_sources.nu  api_pds_banned.nu  api_pds_tiers.nu  api_repos.nu  api_test.nu  authenticated_stream.nu  authenticated_stream_multi_relay.nu  authenticated_stream_single_relay.nu  authenticated_stream_test.nu  backlinks.nu  backlinks_test.nu  by_collection.nu  collection_index_test.nu  common.nu  count_tracking.nu  crawler_by_collection.nu  crawler_full_network.nu  crawler_pending_throttling.nu  debug_endpoints.nu  ephemeral_gc.nu  ephemeral_gc_test.nu  ephemeral_ttl_noop.nu  ephemeral_ttl_prunes_events.nu  feature_matrix.nu  gc_test.nu  mock_pds.nu  mock_relay.nu  pds_host_status_transitions.nu  pds_status.nu  pds_tier_rule_status.nu  relay_subscribe_repos_ping.nu  relay_ttl_prunes_events.nu  repo_count_resync.nu  repo_sync_integrity.nu  repos_api.nu  repos_api_test.nu  run_all.nu  signal_filter.nu  (+12 more)
tests/helpers/: authenticated_stream.nu  ephemeral_gc.nu  pds_status.nu
