[package]
name = "hydrant"
version = "0.1.0"
edition = "2024"

[features]
sync_all = []

[dependencies]
tokio = { version = "1.0", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
miette = { version = "7", features = ["fancy"] }

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
rmp-serde = { git = "https://github.com/90-008/msgpack-rust.git" }

fjall = { git = "https://github.com/90-008/fjall.git", features = ["lz4", "zstd"], version = "3.1.2" }
lsm-tree = { git = "https://github.com/90-008/lsm-tree.git", features = ["lz4", "zstd"] }
serde_ipld_dagcbor = "0.6"
serde_urlencoded = "0.7"

url = "2.5"
smol_str = "0.3"
futures = "0.3"
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream", "gzip", "brotli", "zstd", "http2"], default-features = false }
axum = { version = "0.8.8", features = ["ws", "macros"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

jacquard-common = { git = "https://tangled.org/ptr.pet/jacquard", default-features = false, features = ["tracing", "std", "crypto"] }
jacquard-api = { git = "https://tangled.org/ptr.pet/jacquard" }
jacquard-identity = { git = "https://tangled.org/ptr.pet/jacquard", features = ["dns", "tracing"] }
jacquard-repo = { git = "https://tangled.org/ptr.pet/jacquard" }
jacquard-derive = { git = "https://tangled.org/ptr.pet/jacquard" }
chrono = { version = "0.4.43", features = ["serde"] }
humantime = "2.3.0"

mimalloc = { version = "0.1", features = ["v3"] }
hex = "0.4"
scc = "3.6.6"
data-encoding = "2.10.0"
cid = "0.11.1"
thiserror = "2.0.18"
rand = "0.10.0"
glob = "0.3"
arc-swap = "1.8.2"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
multibase = "0.9.2"

[dev-dependencies]
tempfile = "3.26.0"

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
lto = "thin"
