[package]
name = "hydrant"
version = "0.1.0"
edition = "2024"

[features]
default = ["indexer"]
__persist_sync_all = []
backlinks = []
relay = []
indexer = []

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
miette = { version = "7", features = ["fancy"] }

serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
rmp-serde = { git = "https://github.com/90-008/msgpack-rust.git" }

fjall = { git = "https://github.com/90-008/fjall.git", features = ["lz4", "zstd"], version = "3.1.2" }
lsm-tree = { git = "https://github.com/90-008/lsm-tree.git", features = ["lz4", "zstd"] }
serde_ipld_dagcbor = "0.6"
serde_urlencoded = "0.7"

bytes = { version = "1.11.1", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
smol_str = "0.3"
futures = "0.3"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls", "stream", "gzip", "brotli", "zstd", "http2"], default-features = false }
axum = { version = "0.8.8", features = ["ws", "macros"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

jacquard-common = { version = "0.11", default-features = false, features = ["tracing", "std", "crypto"] }
jacquard-api = { version = "0.11" }
jacquard-identity = { version = "0.11", features = ["dns", "tracing"] }
jacquard-repo = { version = "0.11" }
jacquard-derive = { version = "0.11" }
chrono = { version = "0.4.43", features = ["serde"] }
humantime = "2.3.0"

mimalloc = { version = "0.1", features = ["v3"] }
hex = "0.4"
scc = "3.6.6"
data-encoding = "2.10.0"
cid = "0.11.1"
iroh-car = "0.5.1"
thiserror = "2.0.18"
rand = "0.10.0"
glob = "0.3"
arc-swap = "1.8.2"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
multibase = "0.9.2"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.26.0"

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
lto = "thin"
