[package]
name = "hydrant"
version = "0.1.0"
edition = "2024"

[features]
default = ["indexer", "indexer_stream"]
__persist_sync_all = []
backlinks = []
relay = []
indexer = []
indexer_stream = ["indexer"]
jetstream = ["dep:zstd"]
user-keyspace = []
firehose-diagnostics = []

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
socket2 = "0.6"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
miette = { version = "7", features = ["fancy"] }

serde = { version = "1.0", features = ["derive", "rc"] }
serde_bytes = "0.11"
serde_json = "1.0"
rmp-serde = { git = "https://github.com/90-008/msgpack-rust.git", rev = "19c54a922301d06310a816c3a6a097aeb73ea3ae" }

fjall = { git = "https://github.com/90-008/fjall.git", rev = "aee642660079ec0a0f70f2f1fb45b8fa71fa4322", features = ["lz4", "zstd"], version = "3.1.2" }
lsm-tree = { git = "https://github.com/90-008/lsm-tree.git", features = ["lz4", "zstd"] }
serde_ipld_dagcbor = "0.6"
serde_urlencoded = "0.7"
fluent-uri = "0.4.1"
zstd = { version = "0.13", optional = true }

bytes = { version = "1.11.1", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
smol_str = "0.3"
futures = "0.3"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls-native-roots", "stream", "gzip", "brotli", "zstd", "http2"], default-features = false }
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
axum-tws = "0.6.0"

jacquard-common = { version = "0.11", default-features = false, features = ["tracing", "std", "crypto"] }
jacquard-api = { version = "0.11" }
jacquard-identity = { version = "0.11", features = ["dns", "tracing"] }
jacquard-repo = { version = "0.11" }
jacquard-derive = { version = "0.11" }
chrono = { version = "0.4.43", features = ["serde"] }
humantime = "2.3.0"

mimalloc = { version = "0.1", features = ["v3"] }
hex = "0.4"
scc = "3.6.6"
data-encoding = "2.10.0"
cid = "0.11.1"
iroh-car = "0.5.1"
thiserror = "2.0.18"
rand = "0.10.0"
glob = "0.3"
arc-swap = "1.8.2"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-websockets = { version = "0.13.2", features = ["client", "server", "rustls-native-roots", "aws_lc_rs", "rand"] }
multibase = "0.9.2"
sha2 = "0.10.9"
parking_lot = "0.12.5"
hyper = "1.8.1"
http = "1"
nohash-hasher = "0.2.0"
ahash = "0.8.12"

[dev-dependencies]
tempfile = "3.26.0"

[[bin]]
name = "replay_bench"
path = "src/bin/replay_bench.rs"
required-features = ["indexer_stream"]

[[example]]
name = "statusphere"
required-features = ["indexer_stream"]

[profile.dev]
opt-level = 1

[profile.bench]
opt-level = 3
lto = "thin"

[profile.release]
lto = "thin"
codegen-units = 1

[lints.clippy]
obfuscated_if_else = "allow"
